--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.mt.armutcasestudy" >
+    package="com.mt.armutcasestudy">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".helper.MyApplication"
         android:allowBackup="true"
@@ -14,12 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ArmutCaseStudy"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".DetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".ScrollingActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.ArmutCaseStudy.NoActionBar" >
+            android:theme="@style/Theme.ArmutCaseStudy.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
