--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:theme="@style/Theme.ArmutCaseStudy"
         tools:targetApi="31">
         <activity
-            android:name=".DetailsActivity"
+            android:name=".ui.DetailsActivity"
             android:exported="false" />
         <activity
-            android:name=".ScrollingActivity"
+            android:name=".ui.ScrollingActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ArmutCaseStudy.NoActionBar">
